Block the very last page of kernel address space. The problem here is that non of the VM functions handling areas are overflow safe. If an area is created that spans across the last page many places will run into an integer overflow. This mostly concerns the area allocation path in find_and_insert_area_slot() and also vm_create_anonymous_area() where the loop for mapping pages for B_FULL_LOCK areas overflows and runs more times than it should leading to #2550. This could be seen as a workaround. The real fix would be to make everything overflow safe. The thing is that this does also concern the user of the area which could easily have forgotten to check for overflows as well, so I am a bit uneasy with handing out areas that could easily lead to such hard to debug problems. Since this is really an edge case and this single step safes quite a bit of extra checks I'd actually be OK with keeping it that way.

git-svn-id: file:///srv/svn/repos/haiku/haiku/trunk@33032 a95241bf-73f2-0310-859d-f6bbb57e9c96